# accounting

./: README.md
go/: go.mod  main.go  main_test.go
node/: benchmark.ts  package.json  pnpm-lock.yaml  transactionProcessor.ts  types.ts
rust/: Cargo.toml
rust/benches/: performance.rs
rust/src/: lib.rs
